# Personal-RAG

./: README.md
backend/: .env.example  auth.py  database.py  main.py  models.py  pinecone_db.py  pyproject.toml  schemas.py  test_sparse_embeddings.py
backend/app/: main.py
backend/app/api/routes/: auth.py  projects.py  queries.py  uploads.py
backend/app/core/: config.py  errors.py
backend/app/db/: database.py  models.py  schemas.py
backend/app/services/: auth.py  chunking.py  content_extraction.py  embeddings.py  llm.py  url_validation.py  vector_store.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppHeader.tsx  Logo.tsx  PageFrame.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  sse.ts  urlValidation.ts
frontend/src/pages/: ChatPage.tsx  LandingPage.tsx  LoginPage.tsx  ProjectsPage.tsx  SignupPage.tsx
frontend/src/providers/: AuthProvider.tsx  ProjectsDataProvider.tsx  ThemeProvider.tsx
