[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.135.3",
    "pinecone>=8.1.1",
    "pydantic>=2.11.3",
    "python-jose[cryptography]>=3.5.0",
    "psycopg2-binary>=2.9.11",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "python-dotenv>=1.2.2",
]
